--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 .import/
 export.cfg
 export_presets.cfg
+*.import
 
 # Imported translations (automatically generated from CSV files)
 *.translation
@@ -13,3 +14,5 @@ export_presets.cfg
 .mono/
 data_*/
 mono_crash.*.json
+
+.DS_Store
